# cp-hub-backend

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260719_0001_create_users_table.py  20260719_0002_create_teachers_table.py  20260719_0003_create_teacher_availability.py  20260719_0004_add_active_slot_unique_index.py  20260719_0005_create_students_table.py  20260719_0006_create_packages_table.py  20260719_0007_create_student_payments_table.py  20260719_0008_create_student_access_grants_table.py  20260720_0009_create_student_program_changes_table.py  20260720_0010_create_class_sessions_and_bookings.py  20260721_0011_create_batch_groups.py  20260721_0012_create_booking_events.py  20260721_0013_add_attendance_marked_booking_event.py  20260721_0014_add_manual_add_booking_event.py
app/: main.py
app/api/: deps.py  router.py
app/commands/: generate_teacher_slots.py
app/core/: config.py  exceptions.py  pagination.py
app/db/: base.py  models.py  session.py
app/modules/batch_groups/: models.py  routes.py  schemas.py  service.py
app/modules/bookings/: models.py  routes.py  schemas.py  service.py
app/modules/classes/: models.py  routes.py  schemas.py  service.py
app/modules/leads/: models.py  routes.py  schemas.py
app/modules/schedules/: models.py  routes.py  schemas.py  service.py  slot_generation.py
app/modules/student_access_grants/: models.py  routes.py  schemas.py  service.py
app/modules/users/: models.py  (+3 more)
app/shared/: enums.py  types.py
tests/: test_health.py
(+20 files in other folders)
